fixed responsiveness gap and changed 1 hero photo

--- a/public/style.css
+++ b/public/style.css
@@ -561,7 +561,7 @@ body{
     }
 
     .fling-minislide img{
-        width: 103%;
+        /* width: 103%; */
         height: 30rem;
         border-radius: 0px;
     }
